# ChangeLog for app-emulation/libguestfs
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Dec 2010; A. Vinogradov <spamslepnoga@inbox.ru> libguestfs-1.7.18.ebuild,
  libguestfs-1.7.19.ebuild:
  replace URI_SRC to rion overlay dovnload

*libguestfs-1.7.18 (05 Dec 2010)

  05 Dec 2010; A. Vinogradov <spamslepnoga@inbox.ru> -libguestfs-1.7.16.ebuild,
  +libguestfs-1.7.18.ebuild:
   bump

*libguestfs-1.7.18 (03 Dec 2010)

  03 Dec 2010; A. Vinogradov <spamslepnoga@inbox.ru> -libguestfs-1.7.16.ebuild,
  +libguestfs-1.7.18.ebuild:
  bump

  27 Nov 2010; A. Vinogradov <spamslepnoga@inbox.ru> -libguestfs-1.7.13.ebuild,
  remowe old

*libguestfs-1.7.16 (27 Nov 2010)

  27 Nov 2010; A. Vinogradov <spamslepnoga@inbox.ru> +libguestfs-1.7.16.ebuild:
  bump

*libguestfs-1.7.13 (25 Nov 2010)

  25 Nov 2010; A. Vinogradov <spamslepnoga@inbox.ru> -libguestfs-1.7.4.ebuild,
  +libguestfs-1.7.13.ebuild, -files/all.patch,
  -files/disable-debootstrap-configure.ac.patch, metadata.xml:
  bump

*libguestfs-1.7.12 (25 Nov 2010)

  25 Nov 2010; A. Vinogradov <spamslepnoga@inbox.ru> +libguestfs-1.7.12.ebuild:
  bump

  14 Nov 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  -libguestfs-1.7.1.ebuild, +libguestfs-1.7.4.ebuild,
  +files/remove-root-check.patch:
  bump

  09 Nov 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  -libguestfs-1.5.21.ebuild, -libguestfs-1.5.26.ebuild:
  drop old ebuild

  04 Nov 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +libguestfs-1.6.0.ebuild, +libguestfs-1.7.1.ebuild:
  add new version

  31 Oct 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +libguestfs-1.5.26.ebuild:
  bump

  24 Oct 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  libguestfs-1.5.21.ebuild:
  add dev-perl/libintl-perlin depend

  24 Oct 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  libguestfs-1.5.21.ebuild, +files/all.patch:
  patch for automagicdepends

  18 Oct 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  -libguestfs-1.4.5.ebuild, -libguestfs-1.5.13.ebuild,