@@ -2,7 +2,9 @@ AUX remove-root-check.patch 1145 RMD160 b54d0a68015cb2978d4f32afa19ee3700076c78f
 DIST libguestfs-1.7.18-x86_64.tar.gz 62332840 RMD160 202ac5883d1453d6225b76029290ccebd44c7e84 SHA1 661786c088fad8d2354e8121a2fafb1d598587fc SHA256 07c4f0b4b50df7407327333d9e9b09c310265d056868531c69659659a9f5218d
 DIST libguestfs-1.7.18.tar.gz 4607818 RMD160 751017131a3766d535652954c7c47d871e100807 SHA1 c9531e273485355fd8b0f560df21c5358065c739 SHA256 e8dc7b8b7a1f50825e683ef97cb06639d12f7c93938190283fdd69f89554471f
 DIST libguestfs-1.7.19.tar.gz 4603258 RMD160 505760b62e881523015aa782d563ced6f5c0d10d SHA1 97863e84d16110d23eebaa839aaeeb0b45fa464f SHA256 f4b3a542473ebcb4160554f73886e462bd977e4bc928dcb4cae6fe88e33b0bbe
+DIST libguestfs-1.7.24.tar.gz 4623917 RMD160 152539e3aba0475015dcaa118120148d72d07332 SHA1 b8cb459d2070049bab8f607f6254e001a2e578c3 SHA256 e0ea7e17c76d978add7be17680ee2248e355dda266658caaa80d20b82889159b
 EBUILD libguestfs-1.7.18.ebuild 3717 RMD160 c32ac0e803ef148ac21de5935efeb6454ac1013e SHA1 9914eb7c567aa0d7d0d0c8e3b6bdd470a3da163c SHA256 fa9249343e0d925cc01ba83a5fd1135e2590b690aa01b47085706399b109a0dd
 EBUILD libguestfs-1.7.19.ebuild 3717 RMD160 c32ac0e803ef148ac21de5935efeb6454ac1013e SHA1 9914eb7c567aa0d7d0d0c8e3b6bdd470a3da163c SHA256 fa9249343e0d925cc01ba83a5fd1135e2590b690aa01b47085706399b109a0dd
-MISC ChangeLog 2981 RMD160 7c887a3509089991a7d8c1d622d5b98f5d8822df SHA1 b8fc86f8ed497ae2777276703fb8ee9d419a17d9 SHA256 ca8da37b98ae697afda364d909f3ee9c5a4911102f4e043926ebc4895e57b29f
+EBUILD libguestfs-1.7.24.ebuild 3717 RMD160 c32ac0e803ef148ac21de5935efeb6454ac1013e SHA1 9914eb7c567aa0d7d0d0c8e3b6bdd470a3da163c SHA256 fa9249343e0d925cc01ba83a5fd1135e2590b690aa01b47085706399b109a0dd
+MISC ChangeLog 3103 RMD160 19b0403e880e49f02f805ddfb5b8144e47dd9168 SHA1 ff80f24b8580e9f2065ee992999f9ac2680cfdb7 SHA256 22ac2795fd3ca4abc4e09af4d4bd5f9d1aea0fed4683349d89854f54b751f610
 MISC metadata.xml 501 RMD160 1d5e04d82191f782fd3108906ced30b87b5a70f5 SHA1 e946ac96e0b411d3d0155cb206c39038b6f28a2a SHA256 4771383569b2f1fae061e04c0147824a9f3be6bb538d35e6b4e93bd0fe26cf2a
